# rusty_gui

./: Cargo.toml  README.md  architecture.md
examples/: hello_window.rs
shaders/: compiler.bat  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: gui.rs  layout.rs  lib.rs
src/components/: base_components.rs  mod.rs
src/rendering/: mod.rs  render.rs  texture.rs  transform.rs  uniform.rs  window.rs
tests/: renderer_test.rs  window_test.rs
