[package]
name = "rusty_gui"
version = "0.1.0"
authors = ["Dimitri Bobkov <bobkov.dimitri@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Windowing
winit = "0.24.0"
# Rendering 
wgpu = "0.6.2"