[package]
name = "rusty_gui"
version = "0.1.0"
authors = ["Dimitri Bobkov <bobkov.dimitri@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_gui"
crate-type = ["rlib", "cdylib"]
bench = true
test = true


[dependencies]
# Windowing
winit = "0.24.0"
# Rendering 
wgpu = "0.7.0"
wgpu_glyph = "0.11.0"
# Async
futures = "0.3.11"
# Used for converting bytes into a shader-readable format
bytemuck = { version = "1.5", features = [ "derive" ] }
# Useful for vector/quaternion maths
cgmath = "0.18"